--- a/musculefront/src/components/SmallCard/smallCard.scss
+++ b/musculefront/src/components/SmallCard/smallCard.scss
@@ -21,9 +21,14 @@
         font-size: 24px;
     }
 
-    // .small-card__direction
-    &__direction {
+    // .small-card__description
+    &__description {
+        max-height: 50%;
         font-size: 18px;
+        & div+div {
+            font-size: 14px;
+            overflow: auto;
+        }
     }
     
 
